Added .idea related files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,10 @@ tags
 .vscode/*
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
+# IntelliJ IDE files
+
+.idea
+.idea/*
+*.iml
+*.ipr
+*.iws
