ENTMQBR-2171: Streamlined amqbroker_controller Reconcile.

--- a/deploy/crds/broker_v1alpha1_amqbroker_cr.yaml
+++ b/deploy/crds/broker_v1alpha1_amqbroker_cr.yaml
@@ -4,4 +4,5 @@ metadata:
   name: example-amqbroker
 spec:
   # Add fields here
-  size: 3
+  size: 4
+  image: registry.access.redhat.com/amq-broker-7/amq-broker-72-openshift:latest
