--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -18,7 +18,7 @@ spec:
           # Replace this with the built image name
           image: amq-broker-operator:latest
           command:
-          - amq-broker-operator
+          - /usr/local/bin/entrypoint
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
