Renamed uses of AMQBroker to ActiveMQArtemis.

--- a/deploy/crds/broker_v1alpha1_amqbroker_cr.yaml
+++ b/deploy/crds/broker_v1alpha1_amqbroker_cr.yaml
@@ -1,9 +1,9 @@
 apiVersion: broker.amq.io/v1alpha1
-kind: AMQBroker
+kind: ActiveMQArtemis
 metadata:
   name: example-amqbroker
   labels:
-    AMQBroker: example-amqbroker
+    ActiveMQArtemis: example-amqbroker
     application: example-amqbroker-app
 spec:
   # Add fields here
