--- a/deploy/crds/broker_v1alpha1_amqbroker_crd.yaml
+++ b/deploy/crds/broker_v1alpha1_amqbroker_crd.yaml
@@ -2,14 +2,14 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
-  name: amqbrokers.broker.amq.io
+  name: activemqartemises.broker.amq.io
 spec:
   group: broker.amq.io
   names:
     kind: ActiveMQArtemis
     listKind: ActiveMQArtemisList
-    plural: amqbrokers
-    singular: amqbroker
+    plural: activemqartemises
+    singular: activemqartemis
   scope: Namespaced
     # subresources describes the subresources for custom resources.
     subresources:
