ENTMQBR-2170: Can now create and delete a queue defined in a cr.

--- a/deploy/crds/broker_v1alpha1_activemqartemisaddress_crd.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemisaddress_crd.yaml
@@ -26,11 +26,17 @@ spec:
           properties:
             statefulsetName:
               type: string
+            addressName:
+              type: string
             queueName:
               type: string
+            routingType:
+              type: string
           required:
-            - statefulsetName
+            - addressName
             - queueName
+            - routingType
+            - statefulsetName
           type: object
         status:
           type: object
