--- a/deploy/crds/broker_v1alpha1_activemqartemisaddress_cr.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemisaddress_cr.yaml
@@ -7,6 +7,7 @@ metadata:
     application: example-activemqartemis-app
 spec:
   # Add fields here
-  statefulsetName: example-activemqartemis
-  #sname: example-activemqartemis
+  statefulsetName: example-activemqartemis-ss
+  addressName: myAddress0
   queueName: myQueue0
+  routingType: anycast
