ENTMQBR-2170: Fixed plural naming for activemqartemis crd.

--- a/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
@@ -8,7 +8,7 @@ spec:
   names:
     kind: ActiveMQArtemis
     listKind: ActiveMQArtemisList
-    plural: activemqartemis
+    plural: activemqartemises
     singular: activemqartemis
   scope: Namespaced
   subresources:
