--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: activemq-artemis-operator
           # Replace this with the built image name
-          image: quay.io/ahameed/activemq-artemis-operator:latest
+          image: activemq-artemis-operator:latest
           command:
             - /usr/local/bin/entrypoint
           imagePullPolicy: Always
