ENTMQBR-2403- Added TLS configuration via keystore and truststore
Signed-off-by: Abdul Hameed <ahameed@redhat.com>

--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -244,6 +244,27 @@ items:
                     properties:
                       image:
                         type: string
+                        sslEnabled:
+                          type: boolean
+                      sslConfig:
+                        type: object
+                        description: Configuration of the AMQ SSL deployment
+                        properties:
+                          secretName:
+                            type: string
+                            description:  Name of a secret containing SSL related files
+                          trustStoreFilename:
+                            type: string
+                            description:  SSL trust store filename
+                          trustStorePassword:
+                            type: string
+                            description:  SSL trust store password
+                          keystoreFilename:
+                            type: string
+                            description:  SSL key store filename
+                          keyStorePassword:
+                            type: string
+                            description:  Password for accessing SSL keystore
                     required:
                     - image
                     type: object
