ENTMQBR-2423:Provided mechanism for ephemeral broker instantiations
Signed-off-by: Abdul Hameed <ahameed@redhat.com>

--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -233,6 +233,8 @@ items:
               status: {}
             validation:
               openAPIV3Schema:
+                required:
+                  - spec
                 properties:
                   apiVersion:
                     type: string
@@ -244,11 +246,20 @@ items:
                     properties:
                       image:
                         type: string
-                        sslEnabled:
-                          type: boolean
+                      persistent:
+                        type: boolean
+                      sslEnabled:
+                        type: boolean
+                      clusterEnabled:
+                        type: boolean
                       sslConfig:
                         type: object
                         description: Configuration of the AMQ SSL deployment
+                        required:
+                          - secretName
+                          - trustStoreFilename
+                          - keystoreFilename
+                          - keyStorePassword
                         properties:
                           secretName:
                             type: string
@@ -265,8 +276,35 @@ items:
                           keyStorePassword:
                             type: string
                             description:  Password for accessing SSL keystore
+                      clusterConfig:
+                        type: object
+                        description: Configuration of the AMQ cluster deployment
+                        required:
+                          - clusterUserName
+                          - clusterPassword
+                        properties:
+                          clusterUserName:
+                            type: string
+                            description:  Cluster user
+                          clusterPassword:
+                            type: string
+                            description: Cluster password
+                      commonConfig:
+                        type: object
+                        description: Common configuration of the AMQ
+                        required:
+                          - amqAdminUserName
+                          - amqAdminPassword
+                        properties:
+                          amqAdminUserName:
+                            type: string
+                            description: User name for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
+                          amqAdminPassword:
+                            type: string
+                            description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
                     required:
                     - image
+                    - commonConfig
                     type: object
                   status:
                     type: object
