ENTMQBR-2402 Allow for custom usernames and passwords in configuration

--- a/deploy/crds/broker_v1alpha1_activemqartemis_cr.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemis_cr.yaml
@@ -16,3 +16,8 @@ spec:
     trustStorePassword: changeit
     keystoreFilename: broker.ks
     keyStorePassword: changeit
+  credentialConfig:
+    amqUserName: testamquser
+    amqPassword: testamqpass
+    amqClusterUser: testclusteruser
+    amqClusterPassword: testclusterpass
