--- a/deploy/catalog_resources/redhat/activemq-artemis.package.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis.package.yaml
@@ -1,5 +1,5 @@
 #! package-manifest: deploy/catalog_resources/redhat/activemq-artemis-operator.v0.4.0.clusterserviceversion.yaml
-packageName: activemq-artemis-operator
+packageName: activemq-artemis
 channels:
   - name: alpha
     currentCSV: activemq-artemis-operator.v0.4.0
