ENTMQBR-2524, added readiness probe, ENTMQBR-2529 add liveness probe, ENTMQBR-2533 added replicas configuration
Signed-off-by: Abdul Hameed <ahameed@redhat.com>

--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -264,6 +264,11 @@ items:
                     properties:
                       image:
                         type: string
+                      size:
+                        type: integer
+                        minimum: 1
+                        maximum: 16
+                        description: The number of activemqartemis pods to deploy
                       persistent:
                         type: boolean
                       sslConfig:
