--- a/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
@@ -31,6 +31,11 @@ spec:
           properties:
             image:
               type: string
+            size:
+              type: integer
+              minimum: 1
+              maximum: 16
+              description: The number of activemqartemis pods to deploy
             persistent:
               type: boolean
             sslConfig:
@@ -86,6 +91,7 @@ spec:
                   description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
           required:
           - image
+          - size
           - commonConfig
           type: object
         status:
