--- a/deploy/examples/amq-persistence-deployment.yaml
+++ b/deploy/examples/amq-persistence-deployment.yaml
@@ -10,13 +10,7 @@ spec:
   size: 4
   image: registry.access.redhat.com/amq-broker-7/amq-broker-72-openshift:1.3-4
   persistent: true
-  sslConfig:
-    secretName: amq-app-secret
-    trustStoreFilename: broker.ts
-    trustStorePassword: changeit
-    keystoreFilename: broker.ks
-    keyStorePassword: changeit
   commonConfig:
-    amqAdminUserName: admin
-    amqAdminPassword: admin
+    userName: admin
+    password: admin
 
