--- a/deploy/examples/amq-ssl-persistence-cluster-deployment.yaml
+++ b/deploy/examples/amq-ssl-persistence-cluster-deployment.yaml
@@ -20,6 +20,6 @@ spec:
     clusterUserName: clusteruser
     clusterPassword: clusterpass
   commonConfig:
-    amqAdminUserName: admin
-    amqAdminPassword: admin
+    userName: admin
+    password: admin
 
