--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.4.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.4.0.clusterserviceversion.yaml
@@ -26,8 +26,8 @@ metadata:
          		"size": 4,
          		"image": "registry.access.redhat.com/amq-broker-7/amq-broker-72-openshift:1.3-4",
          		"commonConfig": {
-         			"amqAdminUserName": "admin",
-         			"amqAdminPassword": "admin"
+         			"userName": "admin",
+         			"password": "admin"
          		}
          	}
          },
