--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -36,8 +36,8 @@ items:
                    		"size": 4,
                    		"image": "registry.access.redhat.com/amq-broker-7/amq-broker-72-openshift:1.3-4",
                    		"commonConfig": {
-                   			"amqAdminUserName": "admin",
-                   			"amqAdminPassword": "admin"
+                   			"userName": "admin",
+                   			"password": "admin"
                    		}
                    	}
                    },
@@ -308,13 +308,13 @@ items:
                         type: object
                         description: Common configuration of the AMQ
                         required:
-                          - amqAdminUserName
-                          - amqAdminPassword
+                          - userName
+                          - password
                         properties:
-                          amqAdminUserName:
+                          userName:
                             type: string
                             description: User name for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
-                          amqAdminPassword:
+                          password:
                             type: string
                             description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
                     required:
