ENTMQBR-2397: Adjusted user name and password naming in drainpod example.

--- a/deploy/crds/broker_v1alpha1_activemqartemis_drainpod.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemis_drainpod.yaml
@@ -108,6 +108,6 @@ spec:
     clusterUserName: clusterpoduser
     clusterPassword: clusterpodpassword
   commonConfig:
-    amqAdminUserName: admin
-    amqAdminPassword: admin
+    userName: admin
+    password: admin
 
