ENTMQBR-2070 Add support for AIO in the broker image
Added Aio configure parameter to allow AIO journal.

--- a/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_v1alpha1_activemqartemis_crd.yaml
@@ -38,6 +38,8 @@ spec:
               description: The number of activemqartemis pods to deploy
             persistent:
               type: boolean
+            aio:
+              type: boolean
             sslConfig:
               type: object
               description: Configuration of the AMQ SSL deployment
