--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -62,6 +62,10 @@ required = [
   # branch = "master" #osdk_branch_annotation
   version = "=v0.5.0" #osdk_version_annotation
 
+[[constraint]]
+  name = "github.com/RHsyseng/operator-utils"
+  revision = "232650febd728455482b3c780c79a9ac0be62b50"
+
 [prune]
   go-tests = true
   non-go = true
