Updated OLM related files to point to artemiscloud and updated the version to upcoming 0.6.1.

--- a/deploy/catalog_resources/courier/activemq-artemis-operatorsource.yaml
+++ b/deploy/catalog_resources/courier/activemq-artemis-operatorsource.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   type: appregistry
   endpoint: https://quay.io/cnr
-  registryNamespace: rh_messaging
+  registryNamespace: artemiscloud
   displayName: "ActiveMQ Artemis Operator"
   publisher: "Red Hat"
