Updated clusterserviceversion and catalog-source image to latest built 7.4-2.

--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.6.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.6.1.clusterserviceversion.yaml
@@ -24,7 +24,7 @@ metadata:
        		},
        		"spec": {
          		"size": 1,
-         		"image": "registry.redhat.io/amq-broker-7/amq-broker-73-openshift:7.3-4",
+         		"image": "registry.redhat.io/amq7/amq-broker:7.4-2",
          		"commonConfig": {
          			"userName": "admin",
          			"password": "admin"
