--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -34,7 +34,7 @@ items:
                  		},
                  		"spec": {
                    		"size": 1,
-                   		"image": "registry.redhat.io/amq-broker-7/amq-broker-73-openshift:7.3-4",
+                   		"image": "registry.redhat.io/amq7/amq-broker:7.4-2",
                    		"commonConfig": {
                    			"userName": "admin",
                    			"password": "admin"
