--- a/deploy/examples/artemis-aio-journal.yaml
+++ b/deploy/examples/artemis-aio-journal.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   # Add fields here
   size: 2
-  image: registry.access.redhat.com/amq-broker-7/amq-broker-72-openshift:1.3-4
+  image: registry.redhat.io/amq-broker-7/amq-broker-73-openshift:7.3
   persistent: true
   aio: true
   commonConfig:
